--- a/Snowy-mountains-template/assets/css/main.css
+++ b/Snowy-mountains-template/assets/css/main.css
@@ -30,7 +30,7 @@
 /* Nav Menu Colors - The following color variables are used specifically for the navigation menu. They are separate from the global colors to allow for more customization options */
 :root {
   --nav-color: #ffffff;  /* The default color of the main navmenu links */
-  --nav-hover-color: #67b0d1; /* Applied to main navmenu links when they are hovered over or active */
+  --nav-hover-color: #00C2CC; /* Applied to main navmenu links when they are hovered over or active */
   --nav-mobile-background-color: #ffffff; /* Used as the background color for mobile navigation menu */
   --nav-dropdown-background-color: #ffffff; /* Used as the background color for dropdown items that appear when hovering over primary navigation items */
   --nav-dropdown-color: #444444; /* Used for navigation links of the dropdown items in the navigation menu. */
@@ -53,10 +53,16 @@
 }
 
 .accent-background {
-  --background-color: #67b0d1;
+  --background-color:#287377;
   --default-color: #ffffff;
   --heading-color: #ffffff;
   --surface-color: #8ec4dd;
+}
+
+/* Global Header on Scroll
+------------------------------*/
+.scrolled .header {
+  --background-color: #008a8e;
 }
 
 /* Smooth scroll */
@@ -165,7 +171,7 @@ h6 {
 }
 
 .header .logo img {
-  max-height: 32px;
+  max-height: 50px;
   margin-right: 8px;
 }
 
@@ -181,11 +187,6 @@ h6 {
   box-shadow: 0px 0 18px rgba(0, 0, 0, 0.1);
 }
 
-/* Global Header on Scroll
-------------------------------*/
-.scrolled .header {
-  --background-color: #4b99bb;
-}
 
 /*--------------------------------------------------------------
 # Navigation Menu
@@ -841,11 +842,11 @@ section,
 
 @keyframes btn-up-down {
   0% {
-    transform: translateY(5px);
+    transform: translateY(10px);
   }
 
   100% {
-    transform: translateY(-5px);
+    transform: translateY(-10px);
   }
 }
 
