--- a/RedBlack-demo/assets/css/main.css
+++ b/RedBlack-demo/assets/css/main.css
@@ -204,14 +204,14 @@ h6 {
   text-decoration: underline;
 }
 
-.header .topbar .social-links a {
+.social-links a {
   color: color-mix(in srgb, var(--default-color), transparent 40%);
   line-height: 0;
   transition: 0.3s;
   margin-left: 20px;
 }
 
-.header .topbar .social-links a:hover {
+.social-links a:hover {
   color: var(--accent-color);
 }
 
